--- a/.env.example
+++ b/.env.example
@@ -71,7 +71,7 @@ GOOGLE_ANALYTICS_STREAM_URL=https://saazacademy.com
 GOOGLE_ANALYTICS_STREAM_NAME="Saaz Academy"
 
 # PostHog Analytics - Product Analytics & Feature Flags
-POSTHOG_API_KEY=
-POSTHOG_HOST=https://app.posthog.com
+POSTHOG_API_KEY=phc_xxxxxxxxxxxxxx
+POSTHOG_API_HOST=https://app.posthog.com
 POSTHOG_PROJECT_ID=
 POSTHOG_ENABLED=true
